fixed mistake in wittgenstein4

--- a/iris_tests.ipynb
+++ b/iris_tests.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "85346267",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wittgenstein3 as lw\n",
-    "import pandas as pd"
+    "import wittgenstein4 as lw\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -22,6 +23,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
+    "import random\n",
+    "random.seed(25)\n",
+    "\n",
     "iris = load_iris()\n",
     "X = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
     "y = pd.Series(iris.target)\n",
@@ -32,158 +36,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1af33f89",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>4.4</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>7.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2.1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>120 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-       "22                 4.6               3.6                1.0               0.2\n",
-       "15                 5.7               4.4                1.5               0.4\n",
-       "65                 6.7               3.1                4.4               1.4\n",
-       "11                 4.8               3.4                1.6               0.2\n",
-       "42                 4.4               3.2                1.3               0.2\n",
-       "..                 ...               ...                ...               ...\n",
-       "71                 6.1               2.8                4.0               1.3\n",
-       "106                4.9               2.5                4.5               1.7\n",
-       "14                 5.8               4.0                1.2               0.2\n",
-       "92                 5.8               2.6                4.0               1.2\n",
-       "102                7.1               3.0                5.9               2.1\n",
-       "\n",
-       "[120 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "70614f4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ripper_clf = lw.RIPPER(k=2)"
+    "ripper_clf = lw.RIPPER(k=2)#, n_discretize_bins = 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "bda913b8",
    "metadata": {
     "scrolled": true
@@ -195,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "bdf83548",
    "metadata": {},
    "outputs": [
@@ -205,7 +67,7 @@
        "0.9666666666666667"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,24 +78,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "da811b58",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 6,
+   "id": "cc774077",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=ripper_clf.ruleset_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "24f84f1f",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[petalwidth(cm)=2.1] V\n",
-      "[petalwidth(cm)=1.8] V\n",
-      "[petalwidth(cm)=1.9] V\n",
-      "[petalwidth(cm)=2.3] V\n",
-      "[petalwidth(cm)=2.0] V\n",
-      "[petalwidth(cm)=2.5] V\n",
-      "[petallength(cm)=5.6] V\n",
-      "[sepallength(cm)=7.7]]\n"
+      "[[petallength(cm)=>4.83] V\n",
+      "[petalwidth(cm)=>1.53]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.out_pretty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "30965e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripper_clf.ruleset_ = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "69549e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[petallength(cm)=>4.83] V\n",
+      "[petalwidth(cm)=>1.53]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.out_pretty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6d492016",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ripper_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8b9bbcf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['petal length (cm)', 'petal width (cm)']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = ripper_clf.selected_features_\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9374ceb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sepal length (cm)',\n",
+       " 'sepal width (cm)',\n",
+       " 'petal length (cm)',\n",
+       " 'petal width (cm)']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = ripper_clf.trainset_features_\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8eca2753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripper_clf.class_feat=0\n",
+    "ripper_clf.pos_class=2\n",
+    "ripper_clf.selected_features_ = f\n",
+    "ripper_clf.trainset_features_ = t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8647068d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sepal length (cm)': ['<4.6', '4.6-4.89', '4.89-5.0', '5.0-5.1', '5.1-5.2', '5.2-5.4', '5.4-5.5', '5.5-5.66', '5.66-5.75', '5.75-5.85', '5.85-6.0', '6.0-6.14', '6.14-6.3', '6.3-6.4', '6.4-6.5', '6.5-6.7', '6.7-6.9', '6.9-7.21', '>7.21'], 'sepal width (cm)': ['<2.3', '2.3-2.5', '2.5-2.6', '2.6-2.7', '2.7-2.8', '2.8-2.9', '2.9-3.0', '3.05-3.1', '3.1-3.2', '3.23-3.4', '3.4-3.5', '3.5-3.61', '3.61-3.81', '>3.81'], 'petal length (cm)': ['<1.3', '1.3-1.4', '1.4-1.5', '1.5-1.7', '1.7-3.3', '3.3-3.96', '3.96-4.1', '4.1-4.25', '4.25-4.44', '4.44-4.6', '4.6-4.8', '4.8-4.93', '4.93-5.1', '5.1-5.3', '5.3-5.52', '5.52-5.7', '5.7-6.1', '>6.1'], 'petal width (cm)': ['<0.2', '0.2-0.3', '0.3-0.4', '0.4-1.0', '1.0-1.1', '1.1-1.3', '1.3-1.4', '1.4-1.5', '1.5-1.7', '1.7-1.8', '1.8-1.9', '1.9-2.0', '2.0-2.1', '2.1-2.31', '>2.31']}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ripper_clf.bin_transformer_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "682a7f9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ripper_clf.n_discretize_bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3be50f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maximum_discr_bins = 2\n",
+    "for i in range(4):\n",
+    "    n = len(np.unique(np.asarray(X_train)[:, i])) # Number of unique elements in the i-th variable\n",
+    "    maximum_discr_bins = max(maximum_discr_bins, n)\n",
+    "\n",
+    "maximum_discr_bins = min(maximum_discr_bins, 20)\n",
+    "maximum_discr_bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1f0cb679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rulesets = []\n",
+    "min_dls = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e89f578b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(2, maximum_discr_bins + 1):\n",
+    "    ripper_clf.n_discretize_bins = i\n",
+    "    ripper_clf.fit_rules(pd.concat([X_train,y_train], axis=1),\n",
+    "    n_discretize_bins = i,\n",
+    "    class_feat=0,\n",
+    "    pos_class=2,\n",
+    "    initial_model=None,\n",
+    "    cn_optimize=True)\n",
+    "    \n",
+    "    rulesets += [ripper_clf.ruleset_]\n",
+    "    min_dls += [ripper_clf.dl]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1c7adaff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[70.17301445623596,\n",
+       " 48.179882599379084,\n",
+       " 55.9368403106656,\n",
+       " 61.55314745759908,\n",
+       " 48.309708407840034,\n",
+       " 50.42490859120039,\n",
+       " 58.100697405028725,\n",
+       " 63.60563724193384,\n",
+       " 55.39855163483989,\n",
+       " 66.15829876486833,\n",
+       " 71.66057802256182,\n",
+       " 73.94247787944343,\n",
+       " 67.52467134004337,\n",
+       " 74.97663768245464,\n",
+       " 78.74021190960957,\n",
+       " 73.58934601977755,\n",
+       " 83.70975013620873,\n",
+       " 77.64616212663545,\n",
+       " 72.30236220672327]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_dls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ec10693c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripper_clf.ruleset_ = rulesets[np.argmin(min_dls)] # Select the best ruleset\n",
+    "ripper_clf.n_discretize_bins = range(2, maximum_discr_bins + 1)[np.argmin(min_dls)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9949818d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[petallength(cm)=>4.83 ^ petalwidth(cm)=>1.53] V\n",
+      "[petalwidth(cm)=>1.53] V\n",
+      "[petallength(cm)=>4.83]]\n"
      ]
     }
    ],
@@ -243,75 +416,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "9e7a50fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ripper_clf.replace_rule_at(0, 'petal width (cm)=1.7-2.1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "id": "fd87954d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ripper_clf.remove_rule_at(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "id": "2eee3d36",
+   "execution_count": 32,
+   "id": "d67b7495",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Rule [petalwidth(cm)=1.7-2.1]>"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[petallength(cm)=>4.83 ^ petalwidth(cm)=>1.53] V\n",
+      "[petalwidth(cm)=>1.53] V\n",
+      "[petallength(cm)=>4.83]]\n"
+     ]
     }
    ],
    "source": [
-    "ripper_clf.ruleset_[0]"
+    "ripper_clf.ruleset_.out_pretty()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "65c78f43",
+   "execution_count": null,
+   "id": "7ac41e1d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ripper_clf._ensure_has_bin_transformer()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "7392bbff",
+   "execution_count": null,
+   "id": "db8d9c9a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sepal length (cm)': ['<4.89', '4.89-5.0', '5.0-5.2', '5.2-5.5', '5.5-5.75', '5.75-6.0', '6.0-6.3', '6.3-6.5', '6.5-6.9', '>6.9'], 'sepal width (cm)': ['<2.5', '2.5-2.7', '2.7-2.8', '2.8-3.0', '3.0-3.1', '3.1-3.23', '3.23-3.4', '3.4-3.61', '>3.61'], 'petal length (cm)': ['<1.4', '1.4-1.5', '1.5-1.7', '1.7-3.96', '3.96-4.25', '4.25-4.6', '4.6-4.93', '4.93-5.3', '5.3-5.7', '>5.7'], 'petal width (cm)': ['<0.2', '0.2-0.4', '0.4-1.1', '1.1-1.3', '1.3-1.5', '1.5-1.7', '1.7-1.9', '1.9-2.1', '>2.1']}"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ripper_clf.bin_transformer_"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a509513f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "950f8187",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02eb8e48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d424378",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "384dc188",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -717,17 +894,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 26,
    "id": "b7e6c54a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'sepal length (cm)': ['<4.89', '4.89-5.0', '5.0-5.2', '5.2-5.5', '5.5-5.75', '5.75-6.0', '6.0-6.3', '6.3-6.5', '6.5-6.9', '>6.9'], 'sepal width (cm)': ['<2.5', '2.5-2.7', '2.7-2.8', '2.8-3.0', '3.0-3.1', '3.1-3.23', '3.23-3.4', '3.4-3.61', '>3.61'], 'petal length (cm)': ['<1.4', '1.4-1.5', '1.5-1.7', '1.7-3.96', '3.96-4.25', '4.25-4.6', '4.6-4.93', '4.93-5.3', '5.3-5.7', '>5.7'], 'petal width (cm)': ['<0.2', '0.2-0.4', '0.4-1.1', '1.1-1.3', '1.3-1.5', '1.5-1.7', '1.7-1.9', '1.9-2.1', '>2.1']}"
+       "None"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
