--- a/test_w_sample_size.ipynb
+++ b/test_w_sample_size.ipynb
@@ -78,7 +78,76 @@
    "execution_count": null,
    "id": "4d3fbc0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thyroid with test size 0.2 completed\n",
+      "thyroid with test size 0.33 completed\n",
+      "thyroid with test size 0.5 completed\n",
+      "thyroid with test size 0.66 completed\n",
+      "audiology with test size 0.2 completed\n",
+      "audiology with test size 0.33 completed\n",
+      "audiology with test size 0.5 completed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 4 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n",
+      "C:\\Users\\nikma\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:666: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "  warnings.warn((\"The least populated class in y has only %d\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "audiology with test size 0.66 completed\n",
+      "autism with test size 0.2 completed\n",
+      "autism with test size 0.33 completed\n",
+      "autism with test size 0.5 completed\n",
+      "autism with test size 0.66 completed\n",
+      "adult with test size 0.2 completed\n",
+      "adult with test size 0.33 completed\n"
+     ]
+    }
+   ],
    "source": [
     "#create 3D dataset\n",
     "xarray_3d = xr.Dataset(\n",
@@ -115,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9f6b7f",
+   "id": "f79e2343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "63e539e9",
+   "id": "55535e7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0dce002e",
+   "id": "5ebf5d4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a6a5fea9",
+   "id": "2ddd87c7",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8121d0f4",
+   "id": "cf460640",
    "metadata": {},
    "outputs": [],
    "source": []
