added code to handle multiple scores

--- a/test_w_sample_size.ipynb
+++ b/test_w_sample_size.ipynb
@@ -144,7 +144,8 @@
       "autism with test size 0.5 completed\n",
       "autism with test size 0.66 completed\n",
       "adult with test size 0.2 completed\n",
-      "adult with test size 0.33 completed\n"
+      "adult with test size 0.33 completed\n",
+      "adult with test size 0.5 completed\n"
      ]
     }
    ],
@@ -184,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f79e2343",
+   "id": "f62cd336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "55535e7d",
+   "id": "98cb4fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5ebf5d4b",
+   "id": "7c416774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2ddd87c7",
+   "id": "1d6ac10e",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf460640",
+   "id": "12dc5746",
    "metadata": {},
    "outputs": [],
    "source": []
