--- a/iris_tests.ipynb
+++ b/iris_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "85346267",
    "metadata": {},
    "outputs": [],
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "70614f4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ripper_clf = lw.RIPPER(k=2)#, n_discretize_bins = 3)"
+    "ripper_clf = lw.RIPPER(k=2, n_discretize_bins = 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "bda913b8",
    "metadata": {
     "scrolled": true
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "bdf83548",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "0.9666666666666667"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cc774077",
+   "id": "88b0fda7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "24f84f1f",
+   "id": "d07361da",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "30965e9c",
+   "id": "f501f099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "69549e8c",
+   "id": "6e8887f3",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6d492016",
+   "id": "99d6a0e7",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8b9bbcf8",
+   "id": "7a3a2979",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9374ceb5",
+   "id": "749bde71",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8eca2753",
+   "id": "7496cb94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8647068d",
+   "id": "cfde61e4",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "682a7f9b",
+   "id": "f0849072",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3be50f22",
+   "id": "07ec0914",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1f0cb679",
+   "id": "c06552f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e89f578b",
+   "id": "e73f3baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1c7adaff",
+   "id": "bdddbaaf",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ec10693c",
+   "id": "8a9d2604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9949818d",
+   "id": "d673b459",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d67b7495",
+   "id": "a890be2e",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac41e1d",
+   "id": "97c4c52c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db8d9c9a",
+   "id": "05e2ced9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a509513f",
+   "id": "ab371061",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "950f8187",
+   "id": "df2e124c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02eb8e48",
+   "id": "0d557e01",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d424378",
+   "id": "b02d8341",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384dc188",
+   "id": "635c40a1",
    "metadata": {},
    "outputs": [],
    "source": []
