--- a/cv_comparisons.ipynb
+++ b/cv_comparisons.ipynb
@@ -21,7 +21,8 @@
     "n_rep = 10\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_validate"
    ]
   },
   {
@@ -38,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "77e976f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set values of the hyperparameters and define a dictionary with all the datasets and class features\n",
     "\n",
-    "cv = StratifiedKFold(n_splits = 5)\n",
+    "cv = 5\n",
     "budget = 12\n",
     "DFs = {'dfs': [], 'class_feats': [], 'pos_classes': [], 'xgb_accuracy<': [], 'names': []}"
    ]
@@ -698,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "id": "0ef69f96",
    "metadata": {},
    "outputs": [],
@@ -1189,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 21,
    "id": "cadd955b",
    "metadata": {},
    "outputs": [],
@@ -1257,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "id": "4d025a1a",
    "metadata": {},
    "outputs": [],
@@ -1325,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "id": "6c24c285",
    "metadata": {},
    "outputs": [],
@@ -1393,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "id": "5c7b8e9b",
    "metadata": {},
    "outputs": [],
