--- a/iris_tests.ipynb
+++ b/iris_tests.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "id": "85346267",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wittgenstein3 as lw\n",
+    "import wittgenstein3 as lw3\n",
+    "import wittgenstein as lw\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import functions\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "import pickle"
+    "import pickle\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d9337d9e",
+   "execution_count": 58,
+   "id": "90aba25f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "55f25892",
    "metadata": {},
    "outputs": [],
@@ -52,166 +54,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7fa84392",
+   "execution_count": 67,
+   "id": "0ccb78e6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ripper_clf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-826b05c93234>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mripper_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_feat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mpos_class\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'ripper_clf' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.5411704419383895"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ripper_clf.fit(pd.concat([X,y], axis=1), class_feat = 0 , pos_class = 1)"
+    "entropy(y)/math.log2(len(X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "75aac548",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'<function accuracy_score at 0x000002AFFFA25AF0>': 0.9987958205286457}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "functions.acc_rate_with_param_selection(pd.concat([X,y], axis=1), 0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b726961e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv = StratifiedKFold()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0e42ef5e",
+   "execution_count": 55,
+   "id": "90d7d91e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-      "20                 5.4               3.4                1.7               0.2\n",
-      "21                 5.1               3.7                1.5               0.4\n",
-      "22                 4.6               3.6                1.0               0.2\n",
-      "23                 5.1               3.3                1.7               0.5\n",
-      "24                 4.8               3.4                1.9               0.2\n",
-      "..                 ...               ...                ...               ...\n",
-      "145                6.7               3.0                5.2               2.3\n",
-      "146                6.3               2.5                5.0               1.9\n",
-      "147                6.5               3.0                5.2               2.0\n",
-      "148                6.2               3.4                5.4               2.3\n",
-      "149                5.9               3.0                5.1               1.8\n",
-      "\n",
-      "[120 rows x 4 columns]\n",
-      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-      "0                  5.1               3.5                1.4               0.2\n",
-      "1                  4.9               3.0                1.4               0.2\n",
-      "2                  4.7               3.2                1.3               0.2\n",
-      "3                  4.6               3.1                1.5               0.2\n",
-      "4                  5.0               3.6                1.4               0.2\n",
-      "..                 ...               ...                ...               ...\n",
-      "145                6.7               3.0                5.2               2.3\n",
-      "146                6.3               2.5                5.0               1.9\n",
-      "147                6.5               3.0                5.2               2.0\n",
-      "148                6.2               3.4                5.4               2.3\n",
-      "149                5.9               3.0                5.1               1.8\n",
-      "\n",
-      "[120 rows x 4 columns]\n",
-      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-      "0                  5.1               3.5                1.4               0.2\n",
-      "1                  4.9               3.0                1.4               0.2\n",
-      "2                  4.7               3.2                1.3               0.2\n",
-      "3                  4.6               3.1                1.5               0.2\n",
-      "4                  5.0               3.6                1.4               0.2\n",
-      "..                 ...               ...                ...               ...\n",
-      "145                6.7               3.0                5.2               2.3\n",
-      "146                6.3               2.5                5.0               1.9\n",
-      "147                6.5               3.0                5.2               2.0\n",
-      "148                6.2               3.4                5.4               2.3\n",
-      "149                5.9               3.0                5.1               1.8\n",
-      "\n",
-      "[120 rows x 4 columns]\n",
-      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-      "0                  5.1               3.5                1.4               0.2\n",
-      "1                  4.9               3.0                1.4               0.2\n",
-      "2                  4.7               3.2                1.3               0.2\n",
-      "3                  4.6               3.1                1.5               0.2\n",
-      "4                  5.0               3.6                1.4               0.2\n",
-      "..                 ...               ...                ...               ...\n",
-      "145                6.7               3.0                5.2               2.3\n",
-      "146                6.3               2.5                5.0               1.9\n",
-      "147                6.5               3.0                5.2               2.0\n",
-      "148                6.2               3.4                5.4               2.3\n",
-      "149                5.9               3.0                5.1               1.8\n",
-      "\n",
-      "[120 rows x 4 columns]\n",
-      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-      "0                  5.1               3.5                1.4               0.2\n",
-      "1                  4.9               3.0                1.4               0.2\n",
-      "2                  4.7               3.2                1.3               0.2\n",
-      "3                  4.6               3.1                1.5               0.2\n",
-      "4                  5.0               3.6                1.4               0.2\n",
-      "..                 ...               ...                ...               ...\n",
-      "135                7.7               3.0                6.1               2.3\n",
-      "136                6.3               3.4                5.6               2.4\n",
-      "137                6.4               3.1                5.5               1.8\n",
-      "138                6.0               3.0                4.8               1.8\n",
-      "139                6.9               3.1                5.4               2.1\n",
-      "\n",
-      "[120 rows x 4 columns]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for tr, ts in cv.split(X,y):\n",
-    "    print(X.loc[tr,])"
+    "functions.param_selection(pd.concat([X,y], axis=1), 0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "70614f4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ripper_clf = lw.RIPPER(k=2, n_discretize_bins = 10, W=0.4)"
+    "ripper_clf = lw3.RIPPER(k=2, n_discretize_bins = 10, W = 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "bdf83548",
+   "execution_count": 46,
+   "id": "bac250e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripper_clf.fit(pd.concat([X_train,y_train], axis=1), class_feat=0, pos_class=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "cf9c966c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'n_splits'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-3f2ca5b2eb16>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfunctions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0macc_rate_with_param_selection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_feat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos_class\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Desktop\\Statistics and data Science\\Master Thesis\\Code\\functions.py\u001b[0m in \u001b[0;36macc_rate_with_param_selection\u001b[1;34m(df, class_feat, pos_class, cv_outer, cv_inner, param, W, budget, metrics, n_rep)\u001b[0m\n\u001b[0;32m    197\u001b[0m         \u001b[0mcv_out\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStratifiedKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcv_outer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    198\u001b[0m         \u001b[0mcv_in\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mStratifiedKFold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcv_inner\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 199\u001b[1;33m         \u001b[0mscores_run_stand\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv_outer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    200\u001b[0m         \u001b[0mscores_run\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv_outer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    201\u001b[0m         \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'n_splits'"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "functions.acc_rate_with_param_selection(pd.concat([X_train,y_train], axis=1), class_feat=0, pos_class=1)"
+    "ripper_clf.score(X_test, y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8985798f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd0a33b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab7a4b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6036228",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a31906e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "009782b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -321,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1c43c09c",
+   "id": "d3057c8f",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32bcf8f5",
+   "id": "e8431c4c",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b265776",
+   "id": "e3f54d43",
    "metadata": {},
    "outputs": [],
    "source": [
